# borsh-cpp20

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake  Config.cmake.in  PackageProject.cmake  WarningsAsErrors.cmake
include/: borsh.h  borsh.hpp  utils.h
include/borsh/: concepts.h  converters.h  int128.h  serializer.h  templates.h
test/: CMakeLists.txt  borsh.cpp
